# icopykey

./: .gitignore  ANALYSIS.md  ANALYSIS_REPORT.md  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  DEEP_ANALYSIS_FINDINGS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PYTHON_IMPLEMENTATION_PLAN.md  README.md  TEST_PLAN.md  WORKLOG.md  pyproject.toml  test_hid2.py  test_hid3.py  test_hid4.py  test_hid5.py  test_hid6.py
.github/workflows/: build-mac.yml
copykey_python/: README.md  requirements.txt
copykey_python/cli/: README.md  config_manager.py  copykey_cli.py  display.py  menus.py  operations.py  progress.py  validators.py
copykey_python/cli/tests/: test_commands.py  test_display.py  test_validators.py
copykey_python/config/: __init__.py  network_policy.py
copykey_python/core/: __init__.py  card_encryption.py  card_library.py  device_interface.py  key_vault.py  mifare_crypto.py
copykey_python/updater/: firmware_updater.py  library_updater.py
docs/: hardware_attacks.md  manual_testing.md  next_session_probe_record.md  next_session_simulate_nfc.md
packaging/: README.md  build_mac.sh  icopykey.icns  icopykey.spec
src/icopykey/: __init__.py
src/icopykey/cli/: README.md  _protocol.py  _relay_protocol.py  analyze_capture.py  card_ops.py  commands.py  config_manager.py  constants.py  copykey_cli.py  crypto1_attack.py  crypto1_canonical.py  crypto1_cipher.py  device.py  errors.py  hidrelay.py  library.py  logger_setup.py  menus.py  mifare_data.py  nfc_reader.py  operations.py  pcap_writer.py  sniff.py  vault.py
src/icopykey/cli/tests/: test_config.py  test_copykey_cli.py  test_crypto1_attack.py  test_crypto1_canonical.py  test_device_recorder.py  test_nested_attack.py  test_nested_recovery_e2e.py  test_nfc_reader.py  test_pcap_writer.py  test_protocol.py  test_sniff.py
src/icopykey/gui/: __init__.py  __main__.py  app.py
src/icopykey/x100/: README.md  __init__.py  __main__.py  cli.py  config.py  kopized_cli.py
src/icopykey/x100/strategies/: __init__.py  base.py  raw_format.py
src/icopykey/x100/tests/: test_core.py
tests/data/: captured_frames.json
tests/data/nested_traces/: README.md  sample.json
x100_decrypt/: __init__.py  crypto.py  engine.py  external_tools.py  format_strategies.py  keymanager.py  kopized.py  pyproject.toml  strategies.py
x100_decrypt/strategies/: raw_format.py  x100_format.py
x100_decrypt/tests/: test_core.py
