[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icopyzed"
version = "0.2.0"
description = "Offline-first NFC/RFID card management CLI & GUI for CopyKEY / X100 Smart Card Replicator"
authors = [
    { name = "icopykey" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "hidapi>=0.14.0",
    "pycryptodome>=3.19.0",
    "rich>=13.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
yaml = ["PyYAML>=5.4"]
cli = ["numpy>=1.21.0"]
gui = ["PyQt5>=5.15.0", "numpy>=1.21.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=3.0",
    "black>=23.0.0",
    "pyinstaller>=6.0.0",
]
mac-build = [
    "pyinstaller>=6.0.0",
    "PyQt5>=5.15.0",
    "numpy>=1.21.0",
    "hidapi>=0.14.0",
]

[project.scripts]
icopyzed = "icopykey.cli.copykey_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []

[tool.pytest.ini_options]
markers = [
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
]
