[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x100_decrypt"
version = "0.1.0"
description = "Decryption module for X100 Smart Card Replicator"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pycryptodome>=3.15.0",
]

[project.optional-dependencies]
# YAML parsing support
yaml = ["PyYAML>=5.4"]
# Developer and CI tooling
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.1.0",
    "black>=22.3.0",
    "mypy>=1.6.0",
]
# Test dependencies
test = ["pytest>=7.0", "pytest-cov>=3.0"]

[project.scripts]
x100-decrypt = "x100_decrypt.cli:main"
kopized = "x100_decrypt.kopized_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["x100_decrypt*"]
